--- a/css/estilos.css
+++ b/css/estilos.css
@@ -530,80 +530,18 @@ footer .footer-nav .footer-link:hover {
   --btn-color: #ffffff;
   --btn-bg: var(--primary-color-dark);
   --btn-bg-hover: var(--primary-color-dark);
+  --btn-negro:#141414;
 }
 
-/* imagen top 10 */
-.movie-number img {
-  width: 100%;
-  height: 300px;
+#movie-top10-container {
+  overflow: visible !important;
 }
 
 .movie-item {
   position: relative;
   display: inline-block;
   margin-right: 10px;
-  border-top-right-radius: 15%;
-  border-bottom-right-radius: 15%;
-}
-
-.movie-poster {
-  position: relative;
-  border-radius: 50%;
-}
-
-.movie-item img {
-  border-top-right-radius: 15%;
-  border-bottom-right-radius: 15%;
-  border-top-left-radius: 20%;
-  border-bottom-left-radius: 20%;
-}
-
-.movie-number {
-  position: absolute;
-  top: 0px;
-  z-index: 1; /* Para asegurarte de que el número esté encima de la película */
-}
-
-.movie-number img {
-  width: 60px; /* Ajusta el tamaño según sea necesario */
-  height: 250px;
-  border-top-right-radius: 0%;
-  border-bottom-right-radius: 0%;
-}
-
-.enlace {
-  color: var(--primary-color-light) !important;
-  font-size: 20px;
-  margin-left: 20px;
-}
-
-.pai-carousel .movie-carousel-item {
-  position: relative;
-  width: 300px; /* Tamaño inicial del poster */
-  transition: transform 0.3s ease, width 0.3s ease;
-}
-
-.pai-carousel .movie-carousel-item:hover {
-  transform: scale(1.05); /* Efecto de escala para hacer más grande */
-  width: 500px; /* Aumentamos el tamaño cuando se pasa el ratón */
-}
-
-.movie-item img {
-  border-radius: 0%;
-  width: 100%;
-}
-
-.movie-item {
-  position: relative;
-  width: 200px;
-  height: 300px;
-  overflow: hidden;
-  border-radius: 5%;
-  transition: transform 0.3s ease-in-out;
-}
-
-.movie-item:hover {
-  transform: scale(1.3);
+  border-radius: 15%;
 }
 
 .movie-overlay {
@@ -620,11 +558,90 @@ footer .footer-nav .footer-link:hover {
   justify-content: center;
   text-align: center;
   opacity: 0;
+  padding: 7px;
   transition: opacity 0.3s ease-in-out;
+  z-index: 3;
 }
 
 .movie-item:hover .movie-overlay {
   opacity: 1;
+}
+
+.movie-poster img {
+  position: relative;
+  z-index: 3;
+}
+
+.movie-poster {
+  position: relative;
+  border-radius: 50%;
+  width: auto; /* Ajusta automáticamente según la imagen */
+  height: auto;
+}
+
+.movie-item img {
+  border-radius: 20% 15% 15% 20%;
+  width: 100%;
+}
+
+.movie-number {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+
+.movie-number img {
+  width: 60px;
+  height: 250px;
+}
+
+.carousel-caption .bi-info-circle {
+  border-radius: 50%;
+}
+
+.enlace {
+  color: var(--primary-color-light) !important;
+  font-size: 20px;
+  margin-left: 20px;
+  background-color: var(--btn-negro);
+  margin-top: 10px;
+  width: 200px;
+}
+
+.enlace:hover {
+  padding-left: 22px;
+}
+
+body {
+  background-color: var(--btn-negro);
+}
+
+.pai-carousel .movie-carousel-item {
+  position: relative;
+  width: 300px;
+  transition: transform 0.3s ease, width 0.3s ease;
+}
+
+.pai-carousel .movie-carousel-item:hover {
+  transform: scale(1.05);
+  width: 500px;
+}
+
+.movie-item img {
+  border-radius: 0%;
+  width: 100%;
+}
+
+.movie-item {
+  position: relative;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie-item:hover {
+  transform: scale(1.3);
 }
 
 .button-container {
@@ -637,13 +654,10 @@ footer .footer-nav .footer-link:hover {
   font-size: 14px;
   color: #bbb;
   font-weight: 500;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   max-height: 4.5em;
-  padding: 30px 20px;
+  padding: 35px 35px;
 }
 
 .btn:hover {
@@ -652,6 +666,21 @@ footer .footer-nav .footer-link:hover {
 
 .movie-item {
   flex: 0 0 auto;
+}
+
+#movie-lista-container, .movie-carousel-inner {
+  height: 100%;
+}
+
+.movie-carousel-inner, .top10-carousel-inner {
+  display: flex;
+  gap: 15px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.movie-item img {
+  margin-right: 60px;
+  height: 200px;
 }
 
 .button-container {
@@ -663,7 +692,8 @@ footer .footer-nav .footer-link:hover {
   gap: 10px;
   margin-top: 10px;
 }
-.button-container .detalles-btn {
+
+.detalles-btn {
   grid-column: 1/-1;
   border-radius: 20px;
   padding: 8px 15px;
@@ -671,15 +701,18 @@ footer .footer-nav .footer-link:hover {
   text-align: center;
   font-weight: bold;
 }
-.button-container .fav-btn {
+
+.fav-btn {
   background: #ff4d4d;
   border: none;
 }
-.button-container .add-btn {
+
+.add-btn {
   background: #00fa94;
   border: none;
 }
-.button-container .play-btn {
+
+.play-btn {
   background: #ffcc00;
   border: none;
 }
@@ -687,9 +720,82 @@ footer .footer-nav .footer-link:hover {
 .tituloPrincipal {
   font-size: 60px;
   margin-left: 20px;
+  background-color: var(--btn-negro);
 }
 
 .titulos {
   font-size: 40px;
   margin-left: 20px;
+  background-color: var(--btn-negro);
+}
+
+.movie-item {
+  position: relative;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.movie-number {
+  position: absolute;
+  left: 0px;
+  top: 25%;
+  transform: translateY(-50%);
+  font-size: 110px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.7);
+  -webkit-text-stroke: 4px rgb(255, 255, 255);
+  z-index: 3;
+}
+
+.movie-poster {
+  position: relative;
+  width: 300px;
+  height: 250px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.movie-poster img {
+  width: 100%;
+  height: auto;
+  display: block;
+  position: relative;
+  z-index: 2;
+}
+
+.movie-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 15px;
+}
+
+#movie-top10-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  gap: 10px;
+  scroll-behavior: smooth;
+}
+
+.movie-item {
+  flex: 0 0 auto;
+}
+
+.movie-item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.movie-number {
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  font-size: 140px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.384);
+  -webkit-text-stroke: 3px rgb(255, 255, 255);
+  z-index: 3;
 }/*# sourceMappingURL=estilos.css.map */
